# uggg

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/agents/: build-checker.md  code-scout.md  dict-writer.md  mechanic.md  (+4 more)
docs/: README.md  ai_model_routing.md  architecture.md  daily-support-design.md  implementation-plan.md  manual.md  quality_checklist.md  regular-talk-design.md  script-reader-implementation-plan.md  script-reader-spec.md  spec.md  test-plan.md  text-reader-spec.md
scripts/: dev-ready.ps1
src/: confirm.ts  dnd.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: sidecar.py
src-tauri/src/: db.rs  main.rs  state.rs  tasks.rs
src-tauri/src/commands/: assets.rs  boot.rs  daily.rs  data.rs  dialogue.rs  interaction.rs  lifecycle.rs  mod.rs  onboarding.rs  pomodoro.rs  profile.rs  reader.rs  secrets.rs  settings.rs  tools.rs  topics.rs  tts.rs  window.rs
src-tauri/src/dialogue/: advanced.rs  banter.rs  llm.rs  low.rs  mod.rs
src-tauri/src/ghost/: dict.rs  dnd.rs  manifest.rs  mod.rs
src-tauri/src/presence/: context.rs  idle.rs  mod.rs  quiet.rs  window_pos.rs
src-tauri/src/system/: calendar.rs  cost.rs  deliver.rs  governance.rs  manual.rs  mod.rs  notify.rs  regular_talk.rs  secrets.rs  topics.rs  update.rs  weather.rs
src-tauri/src/tools/: clipboard.rs  clock.rs  mod.rs  reminder.rs  todo.rs
src-tauri/src/tts/: download.rs  gpu.rs  irodori.rs  irodori_download.rs  mod.rs  preprocess.rs  reader.rs  script.rs  sidecar.rs  voice_ref.rs  voicevox.rs
src-tauri/src/window/: mask.rs  mod.rs  tray.rs
(+47 files in other folders)
