[package]
name = "ugg"
version = "0.2.0"
description = "ugg — desktop companion"
authors = ["ugg"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "ugg"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "now"] }
rand = "0.8"
tokio = { version = "1", features = ["sync", "macros", "time", "rt", "process", "io-util"] }
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
libloading = "0.8"
dirs = "5"
tauri-plugin-autostart = "2"
arboard = "3"
quick-xml = "0.36"
zip = { version = "2", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # M9 状況検知 (daily-support-design §7.3): GetSystemPowerStatus / GetTickCount
    "Win32_System_Power",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
